# sales_guru_docs

./: 404.html  mkdocs.yml  pyproject.toml
1.0.0/en/: index.html
1.0.0/en/philosophy/: index.html
1.0.0/ru/philosophy/: index.html
1.1.0/: 404.html  index.html
1.1.0/philosophy/: index.html
1.1.0/search/: search_index.json
1.1.0/technologies/: index.html
docs/: index.md
docs/en/: philosophy.md  technologies.md
docs/ru/: index.md  philosophy.md  technologies.md
en/technologies/: index.html
search/: search_index.json
site/: index.html
site/ru/: index.html
site/ru/technologies/: index.html
