[tool.poetry]
name = "sales-guru-docs"
version = "0.1.0"
description = ""
authors = ["Даниил Толмачев <dev.tolmachev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.13"
mkdocstrings = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
